tegel/src/components/textarea/textarea.scss
@import './textarea-theme-vars.scss';

.sdds-on-white-bg {
  --sdds-textarea-bg: var(--sdds-textarea-on-white-bg);
}

@mixin textfield-base {
  border-radius: 4px 4px 0 0;
  width: 100%;
  box-sizing: border-box;
  margin: 0;
  border: none;
  outline: none;
  height: 100%;
  color: var(--sdds-textarea-color);
  background-color: var(--sdds-textarea-bg);

  &::placeholder {
    opacity: 1;
    color: var(--sdds-textarea-placeholder);
  }

  &:focus::placeholder {
    color: var(--sdds-textarea-placeholder-focus-color);
  }

  &:disabled {
    background-color: var(--sdds-textarea-disabled-bg);
    color: var(--sdds-textarea-disabled-color);
    cursor: not-allowed;

    &::placeholder {
      color: var(--sdds-textarea-disabled-placeholder);
    }

    ~ .sdds-textfield-label-inside {
      color: var(--sdds-textarea-disabled-label);
    }
  }
}

@mixin placeholder-label {
  &::placeholder {
    color: transparent;
  }

  ::placeholder {
    color: transparent;
  }

  //Input field in focus
  &:focus::placeholder {
    transition: color 0.35s ease;
    color: var(--sdds-textarea-placeholder-focus-color);
  }
}

.sdds-textarea-container {
  //@extend .sdds-textfield-container;
  border-radius: 4px 4px 0 0;
  position: relative;
  box-sizing: border-box;

  //@extend end

  height: auto;
  width: 100%;
  min-width: 208px;
  display: inline-flex;
  background-color: transparent;
  flex-flow: row wrap;
  border-bottom: 0;
}

.sdds-textarea-container {
  .sdds-textarea-wrapper {
    position: relative;
    width: unset;
    min-width: 100%;
  }
}

.sdds-textarea-container:not(.sdds-textarea-disabled) {
  .sdds-textarea-wrapper {
    &::before,
    &::after {
      content: '';
      height: 2px;
      width: 0;
      position: absolute;
      background: var(--sdds-textarea-bar);
      transition: 0.35s ease all;
    }

    &::before {
      left: 50%;
    }

    &::after {
      right: 50%;
    }

    &::after,
    &::before {
      top: calc(100% - 2px);
    }
  }
}

.sdds-textarea-input {
  @include textfield-base;

  font: var(--sdds-detail-02);
  letter-spacing: var(--sdds-detail-02-ls);
  padding: var(--sdds-spacing-element-20) var(--sdds-spacing-element-16);
  display: block;
  resize: vertical;
  border-bottom: 1px solid var(--sdds-textarea-border-bottom);
  transition: border-bottom-color 200ms ease;

  // Display none only works in Chrome
  &::-webkit-resizer {
    display: none;
  }

  &:hover {
    border-bottom-color: var(--sdds-textarea-border-bottom-hover);
  }
}

// Need to override default resizer in FF & Safari
.sdds-textarea-resizer-icon {
  color: var(--sdds-textarea-resize-icon);
  position: absolute;
  display: block;
  bottom: 2px;
  right: 1px;
  padding-bottom: 2px;
  padding-right: 2px;
  pointer-events: none;
  background-color: var(--sdds-textarea-bg);

  svg {
    display: block;
  }
}

.sdds-textarea-label {
  font: var(--sdds-detail-05);
  letter-spacing: var(--sdds-detail-05-ls);
  display: block;
  z-index: 1;
  margin-bottom: var(--sdds-spacing-element-8);
  color: var(--sdds-textarea-label-color);
}

.sdds-textarea-container {
  &.sdds-textarea-label-inside {
    .sdds-textarea-label {
      font: var(--sdds-detail-02);
      letter-spacing: var(--sdds-detail-02-ls);
      transition: 0.1s ease all;

      //@include end

      color: var(--sdds-textarea-label-inside-color);
      position: absolute;
      top: var(--sdds-spacing-element-20);
      left: var(--sdds-spacing-element-16);
    }

    .sdds-textarea-input {
      @include placeholder-label;
    }
  }

  &.sdds-textarea-focus {
    &.sdds-textarea-label-inside {
      .sdds-textarea-label {
        font: var(--sdds-detail-07);
        letter-spacing: var(--sdds-detail-07-ls);
        top: var(--sdds-spacing-element-8);
      }
    }

    .sdds-textarea-wrapper {
      &::before,
      &::after {
        width: 50%;
      }
    }
  }

  &.sdds-textarea-data {
    &.sdds-textarea-label-inside {
      .sdds-textarea-label {
        font: var(--sdds-detail-07);
        letter-spacing: var(--sdds-detail-07-ls);
        top: var(--sdds-spacing-element-8);
      }
    }
  }
}

.sdds-textarea-textcounter {
  //@extend .sdds-textfield-textcounter;
  font: var(--sdds-detail-05);
  letter-spacing: var(--sdds-detail-05-ls);
  color: var(--sdds-textarea-textcounter);
  float: right;

  & .sdds-textfield-textcounter-divider {
    font: var(--sdds-detail-05);
    letter-spacing: var(--sdds-detail-05-ls);
    color: var(--sdds-textarea-textcounter-divider);
  }

  //@extend end

  flex-basis: 100%;
  text-align: right;
  padding-top: var(--sdds-spacing-element-4);
}

.sdds-textarea-helper {
  font: var(--sdds-detail-05);
  letter-spacing: var(--sdds-detail-05-ls);
  display: block;
  padding-top: var(--sdds-spacing-element-4);
  color: var(--sdds-textarea-helper);
  flex-grow: 2;
  flex-basis: auto;

  ~ .sdds-textarea-textcounter {
    flex-basis: auto;
  }
}

// Different state

.sdds-textarea-success {
  .sdds-textarea-input {
    border-bottom-color: var(--sdds-textarea-border-bottom-success);
  }
}

.sdds-textarea-error {
  .sdds-textarea-input {
    border-bottom-color: var(--sdds-textarea-border-bottom-error);
  }

  .sdds-textarea-wrapper {
    &::after,
    &::before {
      background: var(--sdds-textarea-bar-error);
    }
  }

  .sdds-textarea-helper {
    color: var(--sdds-textarea-helper-error);
  }
}

//Disabled state
.sdds-textarea-disabled {
  .sdds-textarea-input {
    border-bottom-color: transparent;
  }

  .sdds-textarea-label {
    color: var(--sdds-textarea-disabled-label);
  }
}

//Read only state

.sdds-textarea-icon__readonly {
  display: none;
  position: absolute;
  right: 18px;
  top: 18px;

  &-label {
    display: none;
    position: absolute;
    right: 18px;
    top: 48px;
    font: var(--sdds-detail-05);
    letter-spacing: var(--sdds-detail-05-ls);
    padding: 8px;
    color: var(--sdds-textarea-icon-read-only-label-color);
    background-color: var(--sdds-textarea-icon-read-only-label-bg);
    white-space: nowrap;
    border-radius: 4px 0 4px 4px;
  }
}

.sdds-textarea-readonly {
  pointer-events: none;

  .sdds-textarea-icon__readonly {
    display: block;

    &:hover {
      ~ .sdds-textarea-icon__readonly-label {
        display: block;
      }
    }
  }

  .sdds-textfield-input {
    padding-right: 54px;
    background-color: transparent;
  }

  .sdds-textfield-container {
    background-color: transparent;
  }
}

